--- a/style.css
+++ b/style.css
@@ -1,3 +1,266 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body {
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  color: #fff;
   background: #221e1e;
 }
+
+
+
+.wrapper {
+  position: relative;
+  padding-top: 70px;
+  background-image: url('./img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position:  top center;
+  height: 100vh;
+}
+.wrapper::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.37);
+  z-index: 1;
+}
+.container {
+  padding: 0px 15px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.todo__inner {
+  position: relative;
+  z-index: 100;
+}
+
+.todo__box-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+
+.todo__title {
+  text-transform: uppercase;
+  font-size: 50px;
+  letter-spacing: 10px;
+  font-weight: 400;  
+}
+
+
+.todo__lebal-box {
+  margin-bottom: 30px;
+}
+
+.todo__label {
+  position: relative;
+  box-shadow: 0 0 20px #242323;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  padding: 20px 120px 20px 40px;
+  background: rgb(36, 36, 56);
+  width: 100%;
+}
+
+.todo__input {
+  color: #fff;
+  font-size: 14px;
+  width: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+.todo__btn {
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
+  position: absolute;
+  border-radius: 5px;
+  padding: 10px;
+  background: transparent;
+  border: 1px solid #737270;
+  color: #737270;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.todo__btn:hover {
+  color: #fffefb;
+  transition: all 0.2s;
+  box-shadow: 0 0 7px #fffefb;
+}
+
+
+.todo__list-wrapper {
+  border-radius: 5px 5px 0 0;
+  box-shadow: 0 0 20px #242323;
+}
+
+.todo__list {
+  list-style: none;
+}
+
+
+.todo__list-item {
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding: 19px 40px 19px 10px;
+  background: rgb(36, 36, 56);
+  border-bottom: 1px solid #4e4e4e;
+}
+
+.todo__list-item span{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
+  width: 20px;
+  height: 20px;
+  display: block;
+  cursor: pointer;
+}
+.todo__list-item span::before {
+  position: absolute;
+  content: '';
+  bottom: 50%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #4e4e4e;
+  display: block;
+  transform: rotate(45deg) translateY(-50%);
+}
+.todo__list-item span::after {
+  position: absolute;
+  content: '';
+  bottom: 50%;
+  right: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #4e4e4e;
+  display: block;
+  transform: rotate(-45deg) translateY(-50%);
+}
+
+
+
+
+.circle-active {
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  display: none;
+  border-radius: 50%;
+  background:linear-gradient(#e66465, #9198e5);
+  /* background-color: red; */
+  position: relative;
+  z-index: 100;
+}
+.circle-active::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  display: block;
+  width: 10px;
+  height: 10px;
+  background-image: url('./img/icon-check.svg');
+  background-repeat: no-repeat;
+  z-index: 100;
+}
+.todo__item-circle {
+  position: relative;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  background: #4e4e4e;
+  border-radius: 50%;
+}
+.todo__item-circle::before {
+  content: '';
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  border-radius: 50%;
+  display: block;
+  background: rgb(36, 36, 56);
+}
+.todo__item-circle:hover {
+  cursor: pointer;
+  background:linear-gradient(#e66465, #9198e5);
+}
+
+
+
+
+
+
+
+.todo__item-value {
+  cursor: pointer;
+  display: inline-block;
+}
+.value-ective {
+  text-decoration: line-through;
+  color:#4e4e4e;
+}
+
+.todo-footer {
+  position: relative;
+  font-size: 14px;
+  border-radius: 0 0 5px 5px;
+  display: flex;
+  justify-content: space-between;
+  padding: 19px 40px;
+  background: rgb(36, 36, 56);
+  color: #737270;
+
+}
+
+.todo-foote__all-task span {
+  margin-left: 5px;
+}
+
+.todo-footer__btn {
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
+  position: absolute;
+  border-radius: 5px;
+  padding: 10px;
+  background: transparent;
+  border: 1px solid #737270;
+  color: #737270;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.todo-footer__btn:hover {
+  color: #fffefb;
+  transition: all 0.2s;
+  box-shadow: 0 0 7px #fffefb;
+}
+
+
+
+
+
