--- a/style.css
+++ b/style.css
@@ -297,6 +297,14 @@ body {
 
 }
 
+@media(hover: hover){
+  .todo__btn:hover {
+    color: #fffefb;
+    transition: all 0.2s;
+    box-shadow: 0 0 7px #fffefb;
+  }
+}
+
 
 
 
