--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@ body {
 
 .wrapper {
   position: relative;
-  padding-top: 70px;
-  padding-bottom: 70px;
+  padding: 70px 0px;
   background-image: url('./img/bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -347,6 +346,9 @@ body {
   }
 }
 @media(max-width:425px) {
+  .wrapper {
+    padding: 30px 0px;
+  }
   .todo__list-wrapper {
     max-height: 400px;
   }
